chore(server) refactor order key to allow the MealOrderController to list all types of Orders.